--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,28 +1,23 @@
-<div class="fileinput fileinput-new" data-provides="fileinput">
-    <div class="input-group">
+{{ asset_add('styles.css', 'anomaly.field_type.file::less/fileinput.less') }}
+{{ asset_add('scripts.js', 'anomaly.field_type.file::js/fileinput.min.js') }}
 
-        <div class="form-control uneditable-input" data-trigger="fileinput">
-            <span class="fui-clip fileinput-exists"></span>
-            <span class="fileinput-filename"></span>
-        </div>
-
-        <span class="input-group-btn btn-file">
-            <span class="btn btn-default fileinput-new" data-role="select-file">
-                {{ trans('anomaly.field_type.file::input.select_file') }}
-            </span>
-
-            <span class="btn btn-default fileinput-exists" data-role="change">
-                <span class="fui-gear"></span>
-                {{ trans('anomaly.field_type.file::input.change') }}
-            </span>
-
-            <input type="file" name="{{ field_type.input_name }}">
-
-            <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">
-                <span class="fui-trash"></span>
-                {{ trans('anomaly.field_type.file::input.remove') }}
-            </a>
-        </span>
-
+<div class="fileinput fileinput-new input-group" data-provides="fileinput">
+    <div class="form-control" data-trigger="fileinput">
+        <i class="glyphicons glyphicons-paperclip fileinput-exists"></i>
+        <span class="fileinput-filename"></span>
     </div>
+
+    <span class="input-group-addon btn btn-default btn-file">
+        <span class="fileinput-new">
+            {{ trans('anomaly.field_type.file::button.select_file') }}
+        </span>
+        <span class="fileinput-exists">
+            {{ trans('anomaly.field_type.file::button.change') }}
+        </span>
+        <input type="file" name="{{ field_type.input_name }}">
+    </span>
+
+    <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">
+        {{ trans('anomaly.field_type.file::button.remove') }}
+    </a>
 </div>
