--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,10 +1,13 @@
 {{ asset_add('styles.css', 'anomaly.field_type.file::less/fileinput.less') }}
 {{ asset_add('scripts.js', 'anomaly.field_type.file::js/fileinput.min.js') }}
+{{ asset_add('scripts.js', 'anomaly.field_type.file::js/input.js') }}
 
-<div class="fileinput fileinput-new input-group" data-provides="fileinput">
+<div class="fileinput fileinput-{{ field_type.value ? 'exists' : 'new' }} input-group" data-provides="fileinput">
     <div class="form-control" data-trigger="fileinput">
         <i class="glyphicons glyphicons-paperclip fileinput-exists"></i>
-        <span class="fileinput-filename"></span>
+        <span class="fileinput-filename">
+            {{ field_type.value.name }}
+        </span>
     </div>
 
     <span class="input-group-addon btn btn-default btn-file">
@@ -14,6 +17,7 @@
         <span class="fileinput-exists">
             {{ trans('anomaly.field_type.file::button.change') }}
         </span>
+        <input type="hidden" name="{{ field_type.input_name }}_id" value="{{ field_type.value.id }}">
         <input type="file" name="{{ field_type.input_name }}">
     </span>
 
