--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,40 +1,31 @@
-{{ asset_add('styles.css', 'anomaly.field_type.file::less/fileinput.less') }}
-{{ asset_add('scripts.js', 'anomaly.field_type.file::js/fileinput.min.js') }}
 {{ asset_add('scripts.js', 'anomaly.field_type.file::js/input.js') }}
 
-<div
-        class="fileinput fileinput-{{ field_type.value ? 'exists' : 'new' }} input-group {{ field_type.required ? 'required' }} {{ field_type.disabled ? 'disabled' }} {{ field_type.readonly ? 'readonly' }}"
-        data-provides="fileinput">
-    <div class="form-control" data-trigger="fileinput">
-        <i class="glyphicons glyphicons-paperclip fileinput-exists"></i>
-        <span class="fileinput-filename">
-            {{ field_type.value.name }}
-        </span>
-    </div>
+<div class="input-group">
 
-    <span class="input-group-addon btn btn-default btn-file">
-        <span class="fileinput-new">
-            {{ trans('anomaly.field_type.file::button.select_file') }}
-        </span>
-        <span class="fileinput-exists">
-            {{ trans('anomaly.field_type.file::button.change') }}
-        </span>
-        <input type="hidden" name="{{ field_type.input_name }}_id" value="{{ field_type.value.id }}">
-        <input
-                type="file"
-                name="{{ field_type.input_name }}"
-                {{ field_type.required ? 'required' }}
-                {{ field_type.disabled ? 'disabled' }}
-                {{ field_type.readonly ? 'readonly' }}>
+    <span class="input-group-btn">
+        <a
+                href="{{ url('streams/file-field_type/files/' ~ field_type.input_name) }}"
+                data-toggle="modal"
+                data-target="#modal"
+                class="btn btn-default"
+                >{{ trans('anomaly.field_type.file::button.choose_file') }}</a>
     </span>
 
-    <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">
-        {{ trans('anomaly.field_type.file::button.remove') }}
-    </a>
-</div>
+    <input
+            type="hidden"
+            name="{{ field_type.input_name }}"
+            value="{{ field_type.value.id }}"
+            {{ field_type.disabled ? 'disabled' }}
+            {{ field_type.readonly ? 'readonly' }}>
 
-{% if field_type.value %}
-    <a href="{{ url(field_type.value.public_path) }}" class="small" target="_blank">
-        {{ url(field_type.value.public_path) }}
-    </a>
-{% endif %}
+    <input
+            type="text"
+            class="form-control"
+            data-toggle="choose"
+            name="{{ field_type.input_name }}_filename"
+            value="{{ field_type.value.filename }}"
+            placeholder="{{ trans(field_type.placeholder) }}"
+            {{ field_type.disabled ? 'disabled' }}
+            {{ field_type.readonly ? 'readonly' }}>
+
+</div>
