--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -6,7 +6,7 @@
         <a
                 href="{{ url('streams/file-field_type/files/' ~ field_type.input_name) }}"
                 data-toggle="modal"
-                data-target="#modal"
+                data-target="#modal-large"
                 class="btn btn-default"
                 >{{ trans('anomaly.field_type.file::button.choose_file') }}</a>
     </span>
