--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -28,4 +28,12 @@
             {{ field_type.disabled ? 'disabled' }}
             {{ field_type.readonly ? 'readonly' }}>
 
+    <span class="input-group-btn">
+        <a
+                href="#"
+                data-dismiss="file"
+                class="btn btn-default"
+                >{{ trans('anomaly.field_type.file::button.remove') }}</a>
+    </span>
+
 </div>
