--- a/resources/views/choose.twig
+++ b/resources/views/choose.twig
@@ -10,7 +10,7 @@
         <ul class="nav nav-stacked">
             {% for folder in folders %}
                 <li>
-                    <a href="{{ url_to('streams/file-field_type/upload/' ~ stream.namespace ~ '/' ~ stream.slug ~ '/' ~ field_type.field ~ '?folder=' ~ folder.id) }}"
+                    <a href="{{ url_to('streams/file-field_type/upload/' ~ folder.id) }}"
                        class="ajax">
                         <strong>{{ folder.name }}</strong>
                         <br>
