--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -2,14 +2,14 @@
 
 <a
         data-toggle="modal"
-        data-target="#modal"
+        data-target="#{{ field_type.field }}-modal"
         class="btn btn-default btn-xs"
         href="{{ url(field_type.index_path) }}"
         >{{ trans('anomaly.field_type.file::button.select_file') }}</a>
 
 <a
         data-toggle="modal"
-        data-target="#modal"
+        data-target="#{{ field_type.field }}-modal"
         href="{{ url(field_type.upload_path) }}"
         class="btn btn-success btn-xs"
         >{{ trans('anomaly.field_type.file::button.upload') }}</a>
@@ -33,8 +33,20 @@
         >{{ trans('anomaly.field_type.file::button.remove') }}</a>
 
 <input
-        type="hidden"
+        type=""
         name="{{ field_type.input_name }}"
         value="{{ field_type.value.id }}"
         {{ field_type.disabled ? 'disabled' }}
         {{ field_type.readonly ? 'readonly' }}>
+
+<div class="selected"></div>
+
+<div class="modal remote" id="{{ field_type.field }}-modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-loading">
+                <div class="active loader"></div>
+            </div>
+        </div>
+    </div>
+</div>
