--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -15,7 +15,7 @@
         >{{ trans('anomaly.field_type.file::button.upload') }}</a>
 
 <input
-        type=""
+        type="hidden"
         name="{{ field_type.input_name }}"
         value="{{ field_type.value.id }}"
         {{ field_type.disabled ? 'disabled' }}
