Don't reload the table over and over. No sense in it.

--- a/resources/views/upload/partials/body.twig
+++ b/resources/views/upload/partials/body.twig
@@ -5,6 +5,8 @@
          data-icon="{{ icon('upload')|escape }}"
          data-max-size="{{ max_upload_size() }}"
          data-message="{{ trans('anomaly.field_type.file::message.upload') }}"
+         data-loading="{{ trans('anomaly.field_type.file::message.loading') }}"
+         data-uploading="{{ trans('anomaly.field_type.file::message.uploading') }}"
          data-max-parallel="{{ setting_value('anomaly.module.files::max_parallel_uploads', 3) }}"
          data-allowed="{{ folder.allowed_types.value ? '.' ~ folder.allowed_types.value|join(',.') }}"></div>
 
