--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -4,13 +4,13 @@
         data-toggle="modal"
         data-target="#{{ field_type.field_name }}-modal"
         class="btn btn-default btn-xs"
-        href="{{ url(field_type.index_path) }}"
+        href="{{ url('streams/file-field_type/index?folders=' ~ field_type.config.folders|join(',')) }}"
         >{{ trans('anomaly.field_type.file::button.select_file') }}</a>
 
 <a
         data-toggle="modal"
         data-target="#{{ field_type.field_name }}-modal"
-        href="{{ url(field_type.upload_path) }}"
+        href="{{ url('streams/file-field_type/choose?folders=' ~ field_type.config.folders|join(',')) }}"
         class="btn btn-success btn-xs"
         >{{ trans('anomaly.field_type.file::button.upload') }}</a>
 
