--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -4,15 +4,15 @@
         data-toggle="modal"
         data-target="#{{ field_type.field_name }}-modal"
         class="btn btn-default btn-xs"
-        href="{{ url('streams/file-field_type/index?folders=' ~ field_type.config.folders|join(',')) }}"
-        >{{ trans('anomaly.field_type.file::button.select_file') }}</a>
+        href="{{ url('streams/file-field_type/index/' ~ field_type.config_key) }}"
+>{{ trans('anomaly.field_type.file::button.select_file') }}</a>
 
 <a
         data-toggle="modal"
         data-target="#{{ field_type.field_name }}-modal"
-        href="{{ url('streams/file-field_type/choose?folders=' ~ field_type.config.folders|join(',')) }}"
+        href="{{ url('streams/file-field_type/choose/' ~ field_type.config_key) }}"
         class="btn btn-success btn-xs"
-        >{{ trans('anomaly.field_type.file::button.upload') }}</a>
+>{{ trans('anomaly.field_type.file::button.upload') }}</a>
 
 <input
         type="hidden"
