--- a/resources/views/table.twig
+++ b/resources/views/table.twig
@@ -12,16 +12,18 @@
         {% block panel %}
             <div class="{{ table.options.panel_class }} panel-table">
 
-                <table
-                        class="{{ table.options.class ?: 'table' }}"
-                        {{ table.options.sortable ? 'data-sortable' }}
-                        {{ html_attributes(table.options.attributes) }}>
+                <div class="table-responsive">
+                    <table
+                            class="{{ table.options.class ?: 'table' }}"
+                            {{ table.options.sortable ? 'data-sortable' }}
+                            {{ html_attributes(table.options.attributes) }}>
 
-                    {% block body %}
-                        {{ view("streams::table/partials/body", {'table': table}) }}
-                    {% endblock %}
+                        {% block body %}
+                            {{ view("streams::table/partials/body", {'table': table}) }}
+                        {% endblock %}
 
-                </table>
+                    </table>
+                </div>
 
             </div>
         {% endblock %}
