--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -3,7 +3,7 @@
 <a
         data-toggle="modal"
         data-target="#{{ field_type.field_name }}-modal"
-        class="btn btn-default btn-xs"
+        class="btn btn-info btn-xs"
         href="{{ url('streams/file-field_type/index/' ~ field_type.config_key) }}"
 >{{ trans('anomaly.field_type.file::button.select_file') }}</a>
 
