--- a/resources/views/upload/partials/body.twig
+++ b/resources/views/upload/partials/body.twig
@@ -7,6 +7,7 @@
          data-message="{{ trans('anomaly.field_type.file::message.upload') }}"
          data-loading="{{ trans('anomaly.field_type.file::message.loading') }}"
          data-uploading="{{ trans('anomaly.field_type.file::message.uploading') }}"
+         data-overwrite="{{ trans('anomaly.field_type.file::message.overwrite') }}"
          data-max-parallel="{{ setting_value('anomaly.module.files::max_parallel_uploads', 3) }}"
          data-allowed="{{ folder.allowed_types.value ? '.' ~ folder.allowed_types.value|join(',.') }}"></div>
 
