a bit prettier view

--- a/resources/views/upload/partials/header.twig
+++ b/resources/views/upload/partials/header.twig
@@ -15,10 +15,10 @@
 
     <div>
         <span class="label label-info">Max:
-            {{ max_upload_size() }}MB</span>
+            {{ max_upload_size() }} MB</span>
 
         {% if folder.allowed_types.value %}
-            {{ folder.allowed_types.labels|join|raw }}
+            {{ folder.allowed_types.labels|join(' ')|raw }}
         {% endif %}
     </div>
 
