--- a/resources/views/upload/partials/header.twig
+++ b/resources/views/upload/partials/header.twig
@@ -14,7 +14,7 @@
     </h4>
 
     <div>
-        <span class="label label-info">Max:
+        <span class="tag tag-info">Max:
             {{ max_upload_size() }} MB</span>
 
         {% if folder.allowed_types.value %}
