--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,8 +1,12 @@
 {{ asset_add('scripts.js', 'anomaly.field_type.file::js/input.js') }}
 
+{% if field_type.config.mode in ['default', 'select'] %}
 <a data-toggle="modal" data-target="#{{ field_type.field_name }}-modal" class="btn btn-info btn-xs" href="{{ url('streams/file-field_type/index/' ~ field_type.config_key) }}">{{ trans('anomaly.field_type.file::button.select_file') }}</a>
+{% endif %}
 
+{% if field_type.config.mode in ['default', 'upload'] %}
 <a data-toggle="modal" data-target="#{{ field_type.field_name }}-modal" {% if field_type.config.folders|length == 1 %} href="{{ url('streams/file-field_type/upload/' ~ field_type.config.folders|first) }}" {% else %} href="{{ url('streams/file-field_type/choose/' ~ field_type.config_key) }}" {% endif %} class="btn btn-success btn-xs">{{ trans('anomaly.field_type.file::button.upload') }}</a>
+{% endif %}
 
 <input type="hidden" name="{{ field_type.input_name }}" value="{{ field_type.value.id ?: field_type.value }}" {{ html_attributes(field_type.attributes) }} {{ field_type.disabled ? 'disabled' }} {{ field_type.readonly ? 'readonly' }}>
 
