--- a/resources/views/upload/index.twig
+++ b/resources/views/upload/index.twig
@@ -1,4 +1,4 @@
-{{ asset_add('styles.css', 'anomaly.field_type.file::less/upload.less') }}
+{{ asset_add('styles.css', 'anomaly.field_type.file::css/upload.css') }}
 
 {{ asset_add('scripts.js', 'anomaly.field_type.file::js/dropzone.min.js') }}
 {{ asset_add('scripts.js', 'anomaly.field_type.file::js/upload.js') }}
