--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -1,15 +1,15 @@
+{{ asset_add('styles.css', 'anomaly.field_type.file::css/input.css') }}
 {{ asset_add('scripts.js', 'anomaly.field_type.file::js/input.js') }}
-{% set modal_name = "#{field_type.field_name}-#{field_type.locale}-modal" %}
 
 {% if not (field_type.readonly) %}
     {% if field_type.config.mode in ['default', 'select'] %}
-        <a data-toggle="modal" data-target="#{{ modal_name }}" class="btn btn-info btn-xs"
+        <a data-toggle="modal" data-target="#{{ field_type.input_name }}-modal" class="btn btn-info btn-xs"
            href="{{ url('streams/file-field_type/index/' ~ field_type.config_key) }}">{{ trans('anomaly.field_type.file::button.select_file') }}</a>
     {% endif %}
 
     {% if field_type.config.mode in ['default', 'upload'] %}
         <a data-toggle="modal"
-           data-target="#{{ modal_name }}" {% if field_type.config.folders|length == 1 %} href="{{ url('streams/file-field_type/upload/' ~ field_type.config.folders|first) }}" {% else %} href="{{ url('streams/file-field_type/choose/' ~ field_type.config_key) }}" {% endif %}
+           data-target="#{{ field_type.input_name }}-modal" {% if field_type.config.folders|length == 1 %} href="{{ url('streams/file-field_type/upload/' ~ field_type.config.folders|first) }}" {% else %} href="{{ url('streams/file-field_type/choose/' ~ field_type.config_key) }}" {% endif %}
            class="btn btn-success btn-xs">{{ trans('anomaly.field_type.file::button.upload') }}</a>
     {% endif %}
 {% endif %}
@@ -21,7 +21,7 @@
     {{ field_type.value_table|raw }}
 </div>
 
-<div class="modal remote" id="{{ modal_name }}">
+<div class="modal remote" id="{{ field_type.input_name }}-modal">
     <div class="modal-dialog modal-wide">
         <div class="modal-content"></div>
     </div>
