--- a/resources/views/upload/partials/header.twig
+++ b/resources/views/upload/partials/header.twig
@@ -17,9 +17,9 @@
         <span class="tag tag-info">Max:
             {{ max_upload_size() }} MB</span>
 
-        {% if folder.allowed_types.value %}
-            {{ folder.allowed_types.labels|join(' ')|raw }}
-        {% endif %}
+        {% for extension in allowed %}
+            <span class="tag tag-default">{{ extension }}</span>
+        {% endfor %}
     </div>
 
 </div>
