add config key to url

--- a/resources/views/input.twig
+++ b/resources/views/input.twig
@@ -9,7 +9,7 @@
 
     {% if field_type.config.mode in ['default', 'upload'] %}
         <a data-toggle="modal"
-           data-target="#{{ field_type.input_name }}-modal" {% if field_type.config.folders|length == 1 %} href="{{ url('streams/file-field_type/upload/' ~ field_type.config.folders|first) }}" {% else %} href="{{ url('streams/file-field_type/choose/' ~ field_type.config_key) }}" {% endif %}
+           data-target="#{{ field_type.input_name }}-modal" {% if field_type.config.folders|length == 1 %} href="{{ url('streams/file-field_type/upload/' ~ field_type.config.folders|first) ~ '/' ~ field_type.config_key}}" {% else %} href="{{ url('streams/file-field_type/choose/' ~ field_type.config_key) }}" {% endif %}
            class="btn btn-success btn-xs">{{ trans('anomaly.field_type.file::button.upload') }}</a>
     {% endif %}
 {% endif %}
