--- a/resources/views/table.twig
+++ b/resources/views/table.twig
@@ -8,7 +8,7 @@
 
 <div class="{{ table.options.container_class }}">
 
-    {% if not table.rows.empty() %}
+    {% if not table.rows.isEmpty() %}
         {% block panel %}
             <div class="{{ table.options.panel_class }} panel-table">
 
